tests/spec/pass/interface_basic.aja
interface Speaker:
    speak(prefix: str) -> str

type Dog:
    name: str

type Cat:
    name: str

fuc (d: Dog) speak(prefix: str) -> str:
    return prefix + " " + d.name

fuc (c: Cat) speak(prefix: str) -> str:
    return prefix + " " + c.name

fuc say(s: Speaker) -> str:
    return s.speak("Hi")

d = Dog("Rex")
c = Cat("Mimi")
print(say(d))
print(say(c))
